# MLP

./: .gitignore  CMakeLists.txt
src/: Activation.h  DenseLayer.cpp  DenseLayer.h  InputLayer.cpp  InputLayer.h  Layer.h  Matrix.cpp  Matrix.h  Model.cpp  Model.h  Vector.cpp  Vector.h  main.cpp
